# mermaid-parser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: namespace.rs  serialize.rs
src/: lib.rs  parser.rs  parserv2.rs  serializer.rs  types.rs
src/grammar/: mermaid.pest
src/parserv2/: class.rs  frontmatter.rs  namespace.rs  relation.rs
tests/: diagram_smoke.rs  parser.rs  roundtrip.rs  roundtrip_serialization.rs
