[package]
name = "mermaid-parser"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/GenericConfluent/mermaid-parser"
description = "Zero copy mermaid class-diagram parser written with nom."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
thiserror = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
nom = "8.0.0"
derive_more = { version = "2.0.1", features = ["from"] }


[dev-dependencies]
pretty_assertions = "1.4"
